Starting The Real Thing

--- a/index.html
+++ b/index.html
@@ -2,16 +2,61 @@
 <html>
   <head>
     <title>Favorite Music Band</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
  <body>
    <h1>CLASSICAL MUSIC BANDS</h1>
     <p>Welcome to the world of Classical Music. I am Nick and I personally likes Classical Music a lot. Hope you will enjoy this as well.</p>
-  <p>Here is a list of my favorite Classical Music Bands"</p>
+  <p>Here is a list of my favorite Classical Music Bands</p>
   <ul>
     <li>Kool & The Gang</li>
     <li>Londonbeat</li>
     <li>Zapp & Roger</li>
-    <li>MICHAEL LEARNS TO ROCK</li>
+    <li>Michael Learns To Rock</li>
   </ul>
+  <div id="kool" >
+    <h2>Kool & The Gang</h2>
+    <p>These are the songs by the Kool & The Gang</p> 
+    <ol>
+      <li>Cherish</li>
+      <li>Celebration</li>
+      <li>Get Down on It</li>
+      <li>Summer Madness</li>
+    </ol>
+  </div>
+  
+<div id="london" >
+  <h2>Londonbeat</h2>
+  <p>These are the songs by Londonbeat</p> 
+  <ol>
+    <li>I've Been Thinking About You</li>
+    <li>You Bring On The Sun</li>
+    <li>A Better Love</li>
+    
+  </ol>
+</div>
+ 
+<div id="zapp" >
+  <h2>Zapp & Roger</h2>
+  <p>These are the songs by Zapp & Roger</p> 
+  <ol>
+    <li>I wanna Be Your Man</li>
+    <li>I Heard It Through the Grapevine</li>
+    <li>Dance Floor</li>
+    <li>Be Alright</li>
+  </ol>
+
+</div>
+ <div id="rock" >
+  <h2>Michael Learns To Rock</h2>
+  <p>These are the songs by Michael Learns To Rock</p> 
+  <ol>
+    <li>Someday</li>
+    <li>Sleeping Child</li>
+    <li>Paint My Love</li>
+    <li>That's Why</li>
+  </ol>
+ </div>
+ 
   </body>
 </html>
