Added Band Biography

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       <li>Get Down on It</li>
       <li>Summer Madness</li>
     </ol>
+    <h3>BIOGRAPHY</h3>
+    <P>Kool & the Gang is an American band formed in Jersey City, New Jersey, in 1964 by brothers Robert "Kool" Bell and Ronald Bell, with 
+      Dennis "D.T." Thomas, Robert "Spike" Mickens, Charles Smith, George Brown, and Ricky West. They have undergone numerous changes 
+      in personnel and have explored many musical styles throughout their history, including jazz, soul, funk, rock, and pop music.
+       After settling on their name following several changes, 
+      the group signed to De-Lite Records and released their debut album, Kool and the Gang (1970).</P>
   </div>
   
 <div id="london" >
@@ -34,6 +40,13 @@
     <li>A Better Love</li>
     
   </ol>
+  <h3>BIOGRAPHY</h3>
+  <P>Londonbeat is a British-American dance-pop band who scored a number of pop and dance hits in the early 1990s. 
+    Band members are American Jimmy Helms who also had a successful solo career and sang radio jingles for Radio Hallam 
+    and Hereward Radio in the UK, Jimmy Chambers who was borned on  29 January 1946, from Trinidad, and Charles Pierre. Former
+     members include multi-instrumentalist William Henshall credited as Willy M, George Chandler formerly a founding member and 
+     frontman of Olympic Runners); Marc Goldschmitz (subsequently a member of the 
+    band Leash and Myles Kayne.</P>
 </div>
  
 <div id="zapp" >
@@ -45,6 +58,14 @@
     <li>Dance Floor</li>
     <li>Be Alright</li>
   </ol>
+ <h3>BIOGRAPHY</h3>
+ <P>Zapp (also known as the Zapp Band, Zapp & Roger) is an American funk band that emerged from Dayton, Ohio, United States, in 1977. 
+   Particularly influential in the electro subgenre of funk, Zapp were known for their trademark use of the talk-box effect. The
+    original line-up consisted of four Troutman brothers—frontman Roger, Larry, Lester and Terry—and non-Troutman family members
+     Bobby Glover, Gregory Jackson, Sherman Fleetwood, Jerome Derrickson, Eddie Barber and Jannetta Boyce. Zapp also worked closely 
+     with George Clinton and Bootsy Collins of Parliament-Funkadelic during its early stages, their support being a factor in the group
+      gaining a record deal with Warner Bros. 
+   Records in 1979.</P>
 
 </div>
  <div id="rock" >
@@ -56,6 +77,12 @@
     <li>Paint My Love</li>
     <li>That's Why</li>
   </ol>
+  <h3>BIOGRAPHY</h3>
+  <P>Michael Learns to Rock (also known as MLTR) is a Danish soft rock band formed in 1988. The band currently consists of Jascha Richter, 
+    Mikkel Lentz and Kåre Wanscher. Søren Madsen was an original member of the group since its formation but left in 2000. The band has
+     sold over 11 million records over the course of their career, with the majority sold in Europe and Asia. Despite being Danish, 
+     the band performs songs in English. The band has attributed its success in Asia to their drugs-free, clean-living image and to singing 
+    in English as a second language.</P>
  </div>
  
   </body>
