--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
      <a href="https://tubidy.mobi/watch/HZU4Gwj1XsejfiAa6v4HcA_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/kool/celebration.png" alt="Video Link" ></a>
      
       <li>Get Down on It</li>
-      <a href="https://tubidy.mobi/watch/r3SWHG3FtgPeyj6_2FkAfAog_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/kool/Get down on it.png" alt="Get Down On It"></a>
+      <a href="https://tubidy.mobi/watch/r3SWHG3FtgPeyj6_2FkAfAog_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/kool/getdownonit.png" alt="Video Link"></a>
       <li>Summer Madness</li>
-      <a href="https://tubidy.mobi/watch/cspVtbZC0_2BSdFRHFQ_2BUR1Q_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/kool/Summer madness.png" alt="Get Down On It"></a>
+      <a href="https://tubidy.mobi/watch/cspVtbZC0_2BSdFRHFQ_2BUR1Q_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/kool/summermadness.png" alt="Video Link"></a>
     </ol>
     <h3>BIOGRAPHY</h3>
     <P>Kool & the Gang is an American band formed in Jersey City, New Jersey, in 1964 by brothers Robert "Kool" Bell and Ronald Bell, with 
@@ -65,11 +65,11 @@
   <p>These are among my favorite songs the songs by Londonbeat</p> 
   <ol>
     <li>I've Been Thinking About You</li>
-    <a href="https://tubidy.mobi/watch/qcDmSB9zplbifHhFsEpaig_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/londonbeat/Have been thinking about you.png" alt="Video Link" ></a>
+    <a href="https://tubidy.mobi/watch/qcDmSB9zplbifHhFsEpaig_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/londonbeat/havebeenthinkingaboutyou.png" alt="Video Link" ></a>
     <li>You Bring On The Sun</li>
-    <a href="https://tubidy.mobi/watch/td6m0F1M2IMLp_2BUsKYRVVg_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/londonbeat/you bring on the sun.png" alt="Video Link" ></a>
+    <a href="https://tubidy.mobi/watch/td6m0F1M2IMLp_2BUsKYRVVg_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/londonbeat/youbringonthesun.png" alt="Video Link" ></a>
     <li>A Better Love</li>
-    <a href="https://tubidy.mobi/watch/QBi_2BDSv6VmUWv0JO8jrkVA_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/londonbeat/A better love.png" alt="Video Link" ></a>
+    <a href="https://tubidy.mobi/watch/QBi_2BDSv6VmUWv0JO8jrkVA_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/londonbeat/abetterlove.png" alt="Video Link" ></a>
   </ol>
   <h3>BIOGRAPHY</h3>
   <P>Londonbeat is a British-American dance-pop band who scored a number of pop and dance hits in the early 1990s. 
@@ -143,15 +143,15 @@
   <ol>
   
     <li>I wanna Be Your Man</li>
-    <a href="https://tubidy.mobi/watch/3oVgozaoWQPvZBus9Bal1A_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/zapp/I wanna be your man.png" alt="Video Link" ></a>
+    <a href="https://tubidy.mobi/watch/3oVgozaoWQPvZBus9Bal1A_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/zapp/wannabeyourman.png" alt="Video Link" ></a>
     <li>I  HeardIt Through the Grapevine</li>
    
-   <a href="https://tubidy.mobi/watch/n6wnRHQkxxucCJh1oMNynw_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/zapp/I heard it through the grapevine.png" alt="Video Link" ></a>
+   <a href="https://tubidy.mobi/watch/n6wnRHQkxxucCJh1oMNynw_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/zapp/grapvine.png" alt="Video Link" ></a>
    
     <li>Dance Floor</li>
-    <a href="https://tubidy.mobi/watch/Lc_2FPWSQXDSOkR95wyDuGHA_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/zapp/Dance Floor.png" alt="Get Down On It"></a>
+    <a href="https://tubidy.mobi/watch/Lc_2FPWSQXDSOkR95wyDuGHA_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/zapp/dancefloor.png" alt="Video Link"></a>
     <li>Be Alright</li>
-    <a href="https://tubidy.mobi/watch/rRpixs84H12rBKW_2FyNNi9Q_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/zapp/Be alright.png" alt="Get Down On It"></a>
+    <a href="https://tubidy.mobi/watch/rRpixs84H12rBKW_2FyNNi9Q_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/zapp/bealright.png" alt="Video Link"></a>
 
 
   </ol>
@@ -206,12 +206,12 @@
     <a href="https://tubidy.mobi/watch/wYhFaFMXk_2FsAFY8D1AKsgA_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/michael/Someday.png" alt="Video Link" ></a>
     <li>Sleeping Child</li>
    
-   <a href="https://tubidy.mobi/watch/BenaWpxzEFm4_2FaiMuNBFiQ_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/michael/Sleeping Child.png" alt="Video Link" ></a>
+   <a href="https://tubidy.mobi/watch/BenaWpxzEFm4_2FaiMuNBFiQ_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/michael/sleeping child.png" alt="Video Link" ></a>
    
     <li>Paint My Love</li>
-    <a href="https://tubidy.mobi/watch/Sanu9g4Ru_2FXN_2B2rVR71MUw_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/michael/Paint my love.png" alt="Get Down On It"></a>
+    <a href="https://tubidy.mobi/watch/Sanu9g4Ru_2FXN_2B2rVR71MUw_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/michael/paintmylove.png" alt="Video Link"></a>
     <li>That's Why</li>
-    <a href="https://tubidy.mobi/watch/fhdY7jA8W46vi85WDPOizg_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/michael/That's why.png" alt="Get Down On It"></a>
+    <a href="https://tubidy.mobi/watch/fhdY7jA8W46vi85WDPOizg_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/michael/thatswhy.png" alt="Video Link"></a>
 
 
 
