--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
      <a href="https://tubidy.mobi/watch/HZU4Gwj1XsejfiAa6v4HcA_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/kool/celebration.png" alt="Video Link" ></a>
      
       <li>Get Down on It</li>
-      <a href="https://tubidy.mobi/watch/r3SWHG3FtgPeyj6_2FkAfAog_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/kool/getdownonit.png" alt="Video Link"></a>
+      <a href="https://tubidy.mobi/watch/qcDmSB9zplbifHhFsEpaig_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/kool/getdownonit.png" alt="Video Link" ></a>
       <li>Summer Madness</li>
-      <a href="https://tubidy.mobi/watch/cspVtbZC0_2BSdFRHFQ_2BUR1Q_3D_3D/3gp-mobile/fs" target="_blank"><img src="/music/kool/summermadness.png" alt="Video Link"></a>
+      <a href="https://tubidy.mobi/watch/cspVtbZC0_2BSdFRHFQ_2BUR1Q_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/kool/summermadness.png" alt="Video Link" ></a>
+
+
     </ol>
     <h3>BIOGRAPHY</h3>
     <P>Kool & the Gang is an American band formed in Jersey City, New Jersey, in 1964 by brothers Robert "Kool" Bell and Ronald Bell, with 
