why i love kool and gang band

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       Dennis "D.T." Thomas, Robert "Spike" Mickens, Charles Smith, George Brown, and Ricky West. They have undergone numerous changes 
       in personnel and have explored many musical styles throughout their history, including jazz, soul, funk, rock, and pop music.
        After settling on their name following several changes, the group signed to De-Lite Records and released their debut album, <em>Kool and the Gang (1970)</em> .</P>
+       <p>I likes Kool & The Gang band a lot mainly because whenever I listened to their songs, it brings a relaxation mood to me especiall <em>Cherish</em>and <em>Celebration.</em></p>
     <p>These are some of the music by The Kool & The Gang of which do enjoy listening to anytime.</p> 
     <ol>
       <li>Cherish</li>
