Adding Robert Bell Bio

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
 
     </ol>
-    <h3>BIOGRAPHY</h3>
+    <h3>Band Members Biography</h3>
     
       <h4>Robert Bell</h4>
       <p>Robert Earl "Kool" Bell (born October 8, 1950), also known by his Muslim name Muhammad Bayyan,is an American musician,singer and songwriter. He is one .
         of the founding members of the Band.  Bell was born in Youngstown, Ohio and grew up in Jersey City, New Jersey. Along with his brother, Ronald Bell, he began playing jazz, 
         and in 1964 they formed a group named the "Jazziacs". They began playing at clubs in New York City under a series of different band names, 
-        before settling on the name "Kool & the Gang" in 1968. He was one of the co-writers of the song "Boardmeeting" from the 2007
-         album Timbaland Presents Shock Value.</p>
+        before settling on the name <em>Kool & the Gang</em>in 1968. He was one of the co-writers of the song <em>Boardmeeting</em>from the 2007
+         album <em>Timbaland Presents Shock Value</em> .</p>
       
         <img src="https://media.npr.org/assets/img/2020/09/10/gettyimages-463710534_wide-d729d94180505b5823ebca363e0886501600fd46-s1100-c15.jpg" alt="Robert Bell">
         <h4>Ronald Bell</h4>
