Adding Ronald Bell Bio

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
          album <em>Timbaland Presents Shock Value</em> .</p>
       
         <img src="https://media.npr.org/assets/img/2020/09/10/gettyimages-463710534_wide-d729d94180505b5823ebca363e0886501600fd46-s1100-c15.jpg" alt="Robert Bell">
+
         <h4>Ronald Bell</h4>
-        <p>Ronald Nathan Bell (November 1, 1951 – September 9, 2020), also known as Khalis Bayyan,[1] was an American composer, singer, songwriter, 
-          arranger, producer, saxophonist and co-founding member of Kool & the Gang. The band recorded nine No. 1 R&B singles in the 1970s and 80s, 
-          including its No. 1 pop single "Celebration". The group is honored on the Hollywood Walk of Fame and was inducted
+        <p>Ronald Nathan Bell (November 1, 1951 – September 9, 2020), also known as Khalis Bayyan,was an American composer, singer, songwriter, 
+          arranger, producer, saxophonist and co-founding member of <em>Kool & the Gang.</em>  The band recorded nine No. 1 R&B singles in the 1970s and 80s, 
+          including its No. 1 pop single <em>Celebration</em>. The group is honored on the Hollywood Walk of Fame and was inducted
            into the Songwriters Hall of Fame.</p>
            <p>Ronald Bell composed, arranged, produced and performed some of the most popular music.He was a self-taught musician, and his 
-             distinctive sound is on the group's horn lines, bass, synthesizer and vocals. He wrote and produced many of the Kool & the Gang's 
-             songs, including "Celebration", "Cherish", "Jungle Boogie", "Summer Madness", and "Open Sesame".He said his favorite song was 
-             "Celebration".</p>
+             distinctive sound is on the group's horn lines, bass, synthesizer and vocals. He wrote and produced many of the <em>Kool & the Gang's</em>  
+             songs, including <em>Celebration, Cherish, Jungle Boogie,Summer Madness,</em>  and <em>Open Sesame</em>.</p>
             
 
             <p>
