Adding londonbeat intro

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
   
 <div id="london" >
   <h2>Londonbeat</h2>
+  <P>Londonbeat is a British-American dance-pop band who scored a number of pop and dance hits in the early 1990s. 
+    Band members are American Jimmy Helms who also had a successful solo career and sang radio jingles for Radio Hallam 
+    and Hereward Radio in the UK, Jimmy Chambers who was borned on  29 January 1946, from Trinidad, and Charles Pierre. Former
+     members include multi-instrumentalist William Henshall credited as Willy M, George Chandler formerly a founding member and 
+     frontman of Olympic Runners); Marc Goldschmitz (subsequently a member of the band Leash and Myles Kayne.</P>
+     
   <p>These are among my favorite songs the songs by Londonbeat</p> 
   <ol>
     <li>I've Been Thinking About You</li>
@@ -76,12 +82,7 @@
     <a href="https://tubidy.mobi/watch/QBi_2BDSv6VmUWv0JO8jrkVA_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/londonbeat/abetterlove.png" alt="Video Link" ></a>
   </ol>
   <h3>BIOGRAPHY</h3>
-  <P>Londonbeat is a British-American dance-pop band who scored a number of pop and dance hits in the early 1990s. 
-    Band members are American Jimmy Helms who also had a successful solo career and sang radio jingles for Radio Hallam 
-    and Hereward Radio in the UK, Jimmy Chambers who was borned on  29 January 1946, from Trinidad, and Charles Pierre. Former
-     members include multi-instrumentalist William Henshall credited as Willy M, George Chandler formerly a founding member and 
-     frontman of Olympic Runners); Marc Goldschmitz (subsequently a member of the 
-    band Leash and Myles Kayne.</P>
+  
     <h4>Jimmy Helms</h4>
     <p>James D. Helms was born in Florida, United States. His grandfather was a Black Seminole and a preacher. Helms discovered 
       music when his aunt gave the family a radio, and went on to play trumpet in the school band. After high school he moved 
