Why i like londonbeat band

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       in personnel and have explored many musical styles throughout their history, including jazz, soul, funk, rock, and pop music.
        After settling on their name following several changes, the group signed to De-Lite Records and released their debut album, <em>Kool and the Gang (1970)</em> .</P>
        <p>I likes Kool & The Gang band a lot mainly because whenever I listened to their songs, it brings a relaxation mood to me especiall <em>Cherish</em>and <em>Celebration.</em></p>
-    <p>These are some of the music by The Kool & The Gang of which do enjoy listening to anytime.</p> 
+    <p>These are some of the music by The Kool & The Gang of which I do enjoy listening to anytime.</p> 
     <ol>
       <li>Cherish</li>
       <a href="https://tubidy.mobi/watch/JJBnZMJMGBN4o2fQwF3grw_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/kool/cherish.png" alt="Video Link" ></a>
@@ -71,8 +71,10 @@
     and Hereward Radio in the UK, Jimmy Chambers who was borned on  29 January 1946, from Trinidad, and Charles Pierre. Former
      members include multi-instrumentalist William Henshall credited as Willy M, George Chandler formerly a founding member and 
      frontman of Olympic Runners); Marc Goldschmitz (subsequently a member of the band Leash and Myles Kayne.</P>
-     
-  <p>These are among my favorite songs the songs by Londonbeat</p> 
+     <P>Londonbeat music band began to ring bell on my mind when I first listen to one of their songs namely <em>I've Been Thinking About You </em>and I was really moved. Later I search more of their songs and
+       it became interesting to me and I enjoyed listening to such songs.</P>
+
+  <p>These are among my favorite songs played by Londonbeat</p> 
   <ol>
     <li>I've Been Thinking About You</li>
     <a href="https://tubidy.mobi/watch/qcDmSB9zplbifHhFsEpaig_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/londonbeat/havebeenthinkingaboutyou.png" alt="Video Link" ></a>
