Adding Jimmy Helms Bio

--- a/index.html
+++ b/index.html
@@ -83,19 +83,16 @@
     <li>A Better Love</li>
     <a href="https://tubidy.mobi/watch/QBi_2BDSv6VmUWv0JO8jrkVA_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/londonbeat/abetterlove.png" alt="Video Link" ></a>
   </ol>
-  <h3>BIOGRAPHY</h3>
+  <h3>Band Members Biography</h3>
   
     <h4>Jimmy Helms</h4>
     <p>James D. Helms was born in Florida, United States. His grandfather was a Black Seminole and a preacher. Helms discovered 
       music when his aunt gave the family a radio, and went on to play trumpet in the school band. After high school he moved 
-      to Columbus, Ohio, where he released his first single, the Jimmy Radcliffe song "You're Mine You", on Sue Records in 1963. 
+      to Columbus, Ohio, where he released his first single, the Jimmy Radcliffe song <em>You're Mine You</em> , on Sue Records in 1963. 
       He played with the Carl Sally band and moved to Boston, where he worked as a sessions guitarist. In the early 1960s, he 
-      joined the US Army and played trumpet
-       in the Fort Jackson Army Band.</p>
-       <p>After his service, Helms began to spend more time pursuing a music career in the UK. He released "Ragtime Girl" 
-         on Pye records in 1975 and in 1969 he released "If You Let Me" on London. Neither of these early releases made much 
-         of an impact but helped to
-          push Helms into the spotlight in the 1970s.</p>
+      joined the US Army and played trumpet in the Fort Jackson Army Band.</p>
+       <p>After his service, Helms began to spend more time pursuing a music career in the UK. He released <em>Ragtime Girl</em> 
+         on Pye records in 1975 and in 1969 he released <em>If You Let Me</em>  on London.</p>
           <img src="https://m.media-amazon.com/images/I/51dclBZLaxL._SS135_.jpg" alt="Jimmy Helms">
           
           <h4>Jimmy Chambers</h4>
