Adding Jimmy Chambers Bio

--- a/index.html
+++ b/index.html
@@ -100,22 +100,20 @@
 
             The electric London gives him every chance to join his voice to the greatest artists of the time.</p> 
 
-<p>In 1970, in collaboration with Robert Palmer, he co-directed the DaDa group.
+<p>In 1970, in collaboration with Robert Palmer, he co-directed the <em>DaDa group.</em> 
 
-  After the disappearance of DADA, Jimmy records solo and hits his place successfully in the 80's dance charts.
+  After the disappearance of <em>DADA,</em>  Jimmy records solo and hits his place successfully in the 80's dance charts.
   
   Then he recorded an album with Paul Young and made a world tour with him and a memorable date in Wembley for LIVE AID in 1985.
   </p>
 <p>
   After recording with major artists like Tina Turner (Break Every Rule) and Fine Young Cannibals (The Raw and the Cooked) Jimmy teamed
-   up with his pals Jimmy Helms, George Chandler and Willy M in 1987 and co-founded Londonbeat. 
+   up with his pals Jimmy Helms, George Chandler and Willy M in 1987 and co-founded <em>Londonbeat. </em> 
 
 
-  The group co-wrote a series of hits including "9 AM
+  The group co-wrote a series of hits including <em>9 AM</em>  which was their first British hit and reach no9 in the charts.
   
-  which was their first British hit and reach no9 in the charts.
-  
-  "Build It With Love" reach n°5 in the American Charts and "I've Been Thinking About You" whith the blast arrival at number 1 in 27 countries.
+  <em>Build It With Love</em>reach no 5 in the American Charts and <em>I've Been Thinking About You</em> whith the blast arrival at number 1 in 27 countries.
 </p>
 <img src="https://img.discogs.com/oxJdL3XrmXjzaHhUENanJN-Gjes=/fit-in/300x300/filters:strip_icc():format(jpeg):mode_rgb():quality(40)/discogs-images/A-328486-1401309837-5403.jpeg.jpg" alt="">
 <h4>Charles Pierre</h4>
