Adding Charles Pierre Bio

--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
 <h4>Charles Pierre</h4>
 <p>
  Charles, who describes himself as “the class clown” was born in Trinidad in no 9 plenty three. His Father was an eminent 
- surgeon in the West Indies 
- and while he had the opportunity to follow in his fathers’ footsteps, he chose to forge a career of his own for very personal 
+ surgeon in the West Indies and while he had the opportunity to follow in his fathers’ footsteps, he chose to forge a career of his own for very personal 
  reasons, (having discussed the subject with his Dad). This advice would lead him through an amazing adventure of success, failure 
  and more success… </p>
 
