Adding zapp band intro

--- a/index.html
+++ b/index.html
@@ -140,6 +140,15 @@
 
 <div id="zapp" >
   <h2>Zapp & Roger</h2>
+  <P>Zapp (also known as the <em>Zapp Band,</em>  Zapp & Roger) is an American funk band that emerged from Dayton, Ohio, United States, in 1977. 
+    Particularly influential in the electro subgenre of funk, Zapp were known for their trademark use of the talk-box effect. The
+     original line-up consisted of four Troutman brothers—frontman Roger, Larry, Lester and Terry—and non-Troutman family members
+      Bobby Glover, Gregory Jackson, Sherman Fleetwood, Jerome Derrickson, Eddie Barber and Jannetta Boyce. Zapp also worked closely 
+      with George Clinton and Bootsy Collins of Parliament-Funkadelic during its early stages, their support being a factor in the group
+       gaining a record deal with Warner Bros. </P>
+
+       <p>Zapp & Roger became my favorite band mainly because of their slow moving relaxing music . Their music normally gives me company while doing 
+         anything even while resting</p> My best among their songs is <em>I wanna Be Your Man</em>
   <p>These are the songs by Zapp & Roger</p> 
   <ol>
   
@@ -156,12 +165,7 @@
 
   </ol>
  <h3>BIOGRAPHY</h3>
- <P>Zapp (also known as the Zapp Band, Zapp & Roger) is an American funk band that emerged from Dayton, Ohio, United States, in 1977. 
-   Particularly influential in the electro subgenre of funk, Zapp were known for their trademark use of the talk-box effect. The
-    original line-up consisted of four Troutman brothers—frontman Roger, Larry, Lester and Terry—and non-Troutman family members
-     Bobby Glover, Gregory Jackson, Sherman Fleetwood, Jerome Derrickson, Eddie Barber and Jannetta Boyce. Zapp also worked closely 
-     with George Clinton and Bootsy Collins of Parliament-Funkadelic during its early stages, their support being a factor in the group
-      gaining a record deal with Warner Bros. </P>
+ 
 
    <h4>Roger Troutman</h4>
    <p>Roger Troutman (November 29, 1951 – April 25, 1999), also known mononymously as Roger, was an American singer, 
