Why i love zapp band

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
        <p>Zapp & Roger became my favorite band mainly because of their slow moving relaxing music . Their music normally gives me company while doing 
          anything even while resting</p> My best among their songs is <em>I wanna Be Your Man</em>
-  <p>These are the songs by Zapp & Roger</p> 
+  <p>These are some of the songs played by Zapp & Roger</p> 
   <ol>
   
     <li>I wanna Be Your Man</li>
