Adding Roger Troutman Bio

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <a href="https://tubidy.mobi/watch/rRpixs84H12rBKW_2FyNNi9Q_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/zapp/bealright.png" alt="Video Link" ></a>
 
   </ol>
- <h3>BIOGRAPHY</h3>
+ <h3>Band Members Biography</h3>
  
 
    <h4>Roger Troutman</h4>
@@ -177,26 +177,24 @@
        of Zapp and in his subsequent solo releases, he scored a bevy of funk and R&B hits throughout the 1980s 
      and regularly collaborated with hip hop artists in the 1990s.</p>
      <p>
-      In 1981, Troutman cut The Many Facets of Roger, his first solo album. Featuring a funk cover of Marvin Gaye's "I Heard 
-      It Through the Grapevine", which went to number 1 on the R&B singles chart, the album sold over a million copies. The album also 
-      featured the hit "So Ruff, So Tuff", which was similar 
-      to "More Bounce..." as were most Roger/Zapp singles during this time. The same year, Troutman recorded with Parliament-Funkadelic 
+      In 1981, Troutman cut The Many Facets of Roger, his first solo album. Featuring a funk cover of Marvin Gaye's <em>I Heard 
+        It Through the Grapevine</em> , which went to number 1 on the R&B singles chart, the album sold over a million copies. The album also 
+      featured the hit <em>So Ruff, So Tuff"</em> , which was similar 
+      to <em>More Bounce...</em>as were most Roger/Zapp singles during this time. The same year, Troutman recorded with Parliament-Funkadelic 
       on the band's final Warner Brothers' album The Electric Spanking of War Babies.</p>
 <p>
-  In 1984, Troutman issued his second solo album The Saga Continues..., which featured the singles "Girl Cut It Out", "It's in the 
-  Mix" (which was dedicated to Soul Train and its host Don Cornelius), and a cover of Wilson Pickett's "In the Midnight Hour", which
+  In 1984, Troutman issued his second solo album <em>The Saga Continues...,</em>  which featured the singles <em>Girl Cut It Out",It's in the 
+    Mix </em> (which was dedicated to Soul Train and its host Don Cornelius), and a cover of Wilson Pickett's <em>In the Midnight Hour</em> , which
    featured gospel group the Mighty Clouds of Joy. In 1987, Troutman scored his most successful solo album with Unlimited!, carried by
-    the massive hit "I Want to Be Your Man" which rose to number 3 on the Billboard Hot 100 and number 1 on the R&B chart.
+    the massive hit <em>I Want to Be Your Man"</em>  which rose to number 3 on the Billboard Hot 100 and number 1 on the R&B chart.
 </p>
       <p>
         Alongside his successful career as Zapp member and solo artist, Troutman also became a producer and writer for other artists including 
-        Shirley Murdock, whose 1985 Platinum debut featured the Roger-produced hit "As We Lay". He also produced for Zapp member Dale DeGroat 
+        Shirley Murdock, whose 1985 Platinum debut featured the Roger-produced hit <em>As We Lay</em> . He also produced for Zapp member Dale DeGroat 
         on his solo efforts. In 1988, Troutman made an appearance on Scritti Politti's third album Provision, providing talk box vocals on the
-         songs "Boom There She Was" and "Sugar and Spice". </p>
+         songs <em>Boom There She Was</em>. </p>
          <p>
-        Three years later, Troutman released his final solo album with Bridging the Gap, featuring the hit "Everybody (Get Up)". He worked with 
-        Elvis Costello on the song "The Other Side of Summer". In 1989, NBA Entertainment selected Troutman among a variety of candidates to 
-        record a tribute song called "I'm So Happy" for Kareem Abdul-Jabbar.
+       
       </p>
       <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4e/Roger_Troutman.jpg/220px-Roger_Troutman.jpg" alt="">
 
