Adding MLTR intro

--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@
 </div>
  <div id="rock" >
   <h2>Michael Learns To Rock</h2>
+  <P>Michael Learns to Rock (also known as MLTR) is a Danish soft rock band formed in 1988. The band currently consists of Jascha Richter, 
+    Mikkel Lentz and Kåre Wanscher. Søren Madsen was an original member of the group since its formation but left in 2000. The band has
+     sold over 11 million records over the course of their career, with the majority sold in Europe and Asia. Despite being Danish, 
+     the band performs songs in English. The band has attributed its success in Asia to their drugs-free, clean-living image and to singing 
+    in English as a second language.</P>
+    <p>I first came to learnt about MLTR when I listened to their song <em>Sleeping Child</em>so long ago. Later I searched more of their music 
+      and I found more interesting and enjoyable. My best among these song is <em>Someday.</em> </p>
   <p>These are the songs by Michael Learns To Rock</p> 
   <ol>
    
@@ -218,11 +225,7 @@
 
   </ol>
   <h3>BIOGRAPHY</h3>
-  <P>Michael Learns to Rock (also known as MLTR) is a Danish soft rock band formed in 1988. The band currently consists of Jascha Richter, 
-    Mikkel Lentz and Kåre Wanscher. Søren Madsen was an original member of the group since its formation but left in 2000. The band has
-     sold over 11 million records over the course of their career, with the majority sold in Europe and Asia. Despite being Danish, 
-     the band performs songs in English. The band has attributed its success in Asia to their drugs-free, clean-living image and to singing 
-    in English as a second language.</P>
+ 
     <h4>Jascha Richter</h4>
     <p>
       Jascha Richter (born 24 June 1963) is a Danish-American singer-songwriter best known as the lead vocalist and keyboardist of the 
