Why i love MLTR band

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     in English as a second language.</P>
     <p>I first came to learnt about MLTR when I listened to their song <em>Sleeping Child</em>so long ago. Later I searched more of their music 
       and I found more interesting and enjoyable. My best among these song is <em>Someday.</em> </p>
-  <p>These are the songs by Michael Learns To Rock</p> 
+  <p>These are the some of my favorite songs by Michael Learns To Rock</p> 
   <ol>
    
     <li>Someday</li>
