Updating Kool and Gang Music List

--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
        After settling on their name following several changes, the group signed to De-Lite Records and released their debut album, <em>Kool and the Gang (1970)</em> .</P>
        <p>I likes Kool & The Gang band a lot mainly because whenever I listened to their songs, it brings a relaxation mood to me especiall <em>Cherish</em>and <em>Celebration.</em></p>
     <p>These are some of the music by The Kool & The Gang of which I do enjoy listening to anytime.</p> 
+    <ol>
+      <li>Celebration</li>
+      <li>Get Down On It</li>
+      <li>Fresh</li>
+      <li>Too Hot</li>
+      <li>Let's Go Dancin' (Ooh La, La, La)</li>
+      <li>Take My Heart (You Can Have It If You Want It)</li>
+      <li>Jungle Boogie</li>
+      <li>Ladies Night</li>
+      <li>Cherish</li>
+      <li>Funky Stuff</li>
+      <li>In The Heart</li>
+      <li>Steppin' Out</li>
+      <li></li>
+    </ol>
     <ol class="music">
       <li>Cherish</li>
       <a href="https://tubidy.mobi/watch/JJBnZMJMGBN4o2fQwF3grw_3D_3D/3gp-mobile/fs" target="_blank"><img  src="music/kool/cherish.png" alt="Video Link" ></a>
