Updating Londonbeat music list

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <li>Funky Stuff</li>
       <li>In The Heart</li>
       <li>Steppin' Out</li>
-      <li></li>
+      <li>Summer Madness</li>
     </ol>
     <ol class="music">
       <li>Cherish</li>
@@ -95,7 +95,20 @@
                frontman of Olympic Runners); Marc Goldschmitz (subsequently a member of the band Leash and Myles Kayne.</P>
                <P>Londonbeat music band began to ring bell on my mind when I first listen to one of their songs namely <em>I've Been Thinking About You </em>and I was really moved. Later I search more of their songs and
                  it became interesting to me and I enjoyed listening to such songs.</P>
-          
+          <ol>
+            <li>Heaven</li>
+            <li>I've Been Thinking About You</li>
+            <li>The Air</li>
+            <li>You Bring On The Sun</li>
+            <li>Where Are U</li>
+            <li>Read Between Your Eyes</li>
+            <li>Build It with Love</li>
+            <li>I'm Just Your Puppet on a ... (String!)</li>
+            <li>Come Back</li>
+            <li>A Better Love</li>
+            <li>Lover You Send Me Colours</li>
+            <li>That's How I Feel About You</li>
+          </ol>
             <p>These are among my favorite songs played by Londonbeat</p> 
             <ol class="music">
               <li>I've Been Thinking About You</li>
