Updating zapp music list

--- a/index.html
+++ b/index.html
@@ -34,12 +34,19 @@
       <li>Let's Go Dancin' (Ooh La, La, La)</li>
       <li>Take My Heart (You Can Have It If You Want It)</li>
       <li>Jungle Boogie</li>
+      <li>Ladies' Night</li>
+      <li>Friends</li>
       <li>Ladies Night</li>
       <li>Cherish</li>
       <li>Funky Stuff</li>
+      <li>Band Of Gold</li>
+      <li>Knock On Wood</li>
       <li>In The Heart</li>
       <li>Steppin' Out</li>
       <li>Summer Madness</li>
+      <li>Game of Love</li>
+      <li>The Best Thing That Ever Happened To Me</li>
+      <li>Reunited</li>
     </ol>
     <ol class="music">
       <li>Cherish</li>
@@ -103,11 +110,19 @@
             <li>Where Are U</li>
             <li>Read Between Your Eyes</li>
             <li>Build It with Love</li>
+            <li>This Is Your Life</li>
             <li>I'm Just Your Puppet on a ... (String!)</li>
             <li>Come Back</li>
+            <li>9 A.M. (The Comfort Zone)</li>
             <li>A Better Love</li>
             <li>Lover You Send Me Colours</li>
             <li>That's How I Feel About You</li>
+            <li>Failing in Love Again</li>
+            <li>It Takes Two Baby</li>
+            <li>There's a Beat Going On</li>
+            <li>It's in the Blood</li>
+            <li>It Takes Two, Baby</li>
+            <li>Killer Drop / One Blink / Beat Patrol</li>
           </ol>
             <p>These are among my favorite songs played by Londonbeat</p> 
             <ol class="music">
@@ -186,6 +201,29 @@
       
              <p>Zapp & Roger became my favorite band mainly because of their slow moving relaxing music . Their music normally gives me company while doing 
                anything even while resting</p> My best among their songs is <em>I wanna Be Your Man</em>
+
+               <ol>
+                 <li>Ain't the Thing to Do</li>
+                 <li>Been This Way Before</li>
+                 <li>Computer Love</li>
+                 <li>Dance Floor</li>
+                 <li>I wanna Be Your Man</li>
+                 <li>I Can Make You Dance</li>
+                 <li>I Only Have Eyes For You</li>
+                 <li>I Play the Talk Box</li>
+                 <li>It Doesn't Really Matter</li>
+                 <li>Ja Ready To Rock</li>
+                 <li>I  HeardIt Through the Grapevine</li>
+                 <li>Make Me Feel Good</li>
+                 <li>Play Some Blues</li>
+                 <li>Radio People</li>
+                 <li>Be Alright</li>
+                 <li>Sad-Day Moaning</li>
+                 <li>Rock 'N' Roll</li>
+                 <li>Spend My Whole Life</li>
+                 <li>We Need The Buck</li>
+                 <li>Rock Star</li>
+               </ol>
         <p>These are some of the songs played by Zapp & Roger</p> 
         <ol class="music">
         
