Updatin MLTR music list

--- a/index.html
+++ b/index.html
@@ -285,6 +285,29 @@
           in English as a second language.</P>
           <p>I first came to learnt about MLTR when I listened to their song <em>Sleeping Child</em>so long ago. Later I searched more of their music 
             and I found more interesting and enjoyable. My best among these song is <em>Someday.</em> </p>
+<ol>
+  <li>You Took My Heart Away</li>
+  <li>Ocean Of Love</li>
+  <li>Someday</li>
+  <li>Out Of The Blue</li>
+  <li>Complicated Heart</li>
+  <li>I'm Gonna Come Back</li>
+  <li>Sleeping Child</li>
+  <li>I'm Gonna Be Around</li>
+  <li>Hit By A Feeling</li>
+  <li>Laugh & Cry</li>
+  <li>Breaking The Rules</li>
+  <li>Take Me To Your Heart</li>
+  <li>Nothing To Lose</li>
+  <li>I Still Carry On</li>
+  <li>Don't Have To Lose</li>
+  <li>A Different Song</li>
+  <li>Blue Night</li>
+  <li>Paint My Love</li>
+  <li>Forever And A Day</li>
+  <li>If You Leave My World</li>
+</ol>
+
         <p>These are the some of my favorite songs by Michael Learns To Rock</p> 
         <ol class="music">
          
